--- a/index.html
+++ b/index.html
@@ -1,224 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.css" rel="stylesheet">
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hindi Matrix</title>
-</head>
-
-<body>
-
-    <div class="container-fluid" style="width: 80%;">
-        <h3 class="text-primary text-center">Matrix</h3>
-        <p>Clicks:&nbsp;<span id="sClick">0</span></p>
-        <div id="matrix" class=""> </div>
-    </div>
-    <script>"use strict";
-
-        let iR, iC, iXR, iXC;
-        let nums = [];
-        iR = iC = iXR = iXC = 1;
-        var cDiv;
-        let iClicks = 0;
-
-        $(document).ready(function () {
-
-            $("button").on("animationend", resetAnimation);
-            initializeMatrix();
-        });
-
-        function initializeMatrix() {
-            nums = [];
-            $("#matrix").empty();
-            while (nums.length < 16) {
-                const randomNum = Math.floor(Math.random() * 16);
-                if (!nums.includes(randomNum)) {
-                    nums.push(randomNum);
-
-                    iXR = Math.ceil(nums.length / 4);
-                    iXC = (nums.length % 4);
-
-                    if (iXC == 0) { iXC = 4 }
-
-                    if (randomNum == 0) {
-                        iR = iXR;
-                        iC = iXC;
-                    }
-
-                    if (iXC == 1) {
-
-                        $("#matrix").append('<div class="row" id="row' + iXR + '"></div>');
-                    }
-
-                    try {
-                        $("#row" + iXR).append('<div class="col-xs-3"><button type="button" class="btn btnM" id="btn' + iXR + iXC + '">#btn' + iXR + iXC + '</button></div>');
-                        //$("#btn" + iXR + iXC)[0].innerText = randomNum;
-                        $("#btn" + iXR + iXC).text(randomNum);
-
-                        $("#btn" + iXR + iXC).css("width", "100%");
-                    } catch (e) {
-                        throw e;
-
-                    }
-
-
-                }
-            }
-            $("#matrix").append('<div class="row" id="rowReset"><p>&nbsp</p><button type="button" id="btnReset" class="btnR" onclick="initializeMatrix()">Reset</button></div>');
-            setButtons(iR, iC);
-            $("#sClick").text(0);
-
-        }
-
-
-        function resetAnimation() {
-            resetButtonAnimation(this);
-        }
-
-        function resetButtonAnimation(btn) {
-            $(btn).removeClass('animated tada');
-            $(btn).removeClass('animated slide-out-up');
-            $(btn).removeClass('animated slide-out-down');
-            $(btn).removeClass('animated slide-out-left');
-            $(btn).removeClass('animated slide-out-right');
-        }
-
-        function setButtons(iRow, iCol) {
-
-            $("button").off("click");
-            $("button").css("background-color", "");
-
-            /*
-            $("button").on("click", function () {
-
-                $(this).addClass('animated tada');
-                setTimeout(removeTada($(this).attr('id')), 1000);
-            });
-
-            */
-
-            //$("#btn" + iRow + iCol).css("color", "red");
-            $("#btn" + iRow + iCol).css("background-color", "grey");
-            $("#btn" + iRow + iCol).css("color", "grey");
-            $("#btn" + iRow + iCol).text();
-            //$("#btn" + iRow + iCol).css("display", "none");
-
-
-            /*
-            $("#btn" + iRow + iCol).off("click");
-            $("#btn" + iRow + iCol).on("click", function () {
-                $(this).addClass('animated tada');
-                setTimeout(removeTada($(this).attr('id')), 1000);
-            }); */
-
-            var iRP = (iRow - 1);
-            var iRN = (iRow + 1);
-            var iCP = (iCol - 1);
-            var iCN = (iCol + 1);
-
-            setSwapButton($("#btn" + iRP + iCol), moveDown);
-            setSwapButton($("#btn" + iRN + iCol), moveUp);
-            setSwapButton($("#btn" + iRow + iCP), moveLeft);
-            setSwapButton($("#btn" + iRow + iCN), moveRight);
-
-        }
-
-        function removeTada(btn) {
-            $('#' + btn).removeClass('animated tada');
-        }
-
-        function setSwapButton(btn, moveFunc) {
-            $(btn).css("background-color", "");
-            $(btn).css("display", "inline");
-            $(btn).off("click");
-            $(btn).on("click", moveFunc);
-
-
-        }
-
-        function swapClick(btn, direction) {
-            $(btn).off("click");
-            //$(btn).addClass('animated bounceOut' + direction);
-            $("button").css("background-color", "");
-            $("button").css("color", "black");
-            $("button").off("click");
-
-            let iVal = +$(btn).text();
-
-            $("#btn" + iR + iC).text(iVal);
-
-            let iDX = ((iR - 1) * 4) + iC;
-
-            //if(iVal == iDX){
-            //    $("#btn" + iR + iC).css("color", "Green");
-            //}
-
-
-            switch (direction) {
-                case "Up":
-                    iR++
-                    break;
-                case "Down":
-                    //$(btn).text($("#btn" + (iR + 1) + iCol).text());
-
-                    iR--;
-                    break;
-                case "Left":
-
-                    iC--;
-                    break;
-                case "Right":
-
-                    iC++;
-                    break;
-            }
-            setButtons(iR, iC)
-            iClicks++;
-            $("#sClick").text(iClicks);
-        }
-
-        function moveUp() {
-            swapClick($(this), 'Up');
-        }
-
-        function moveDown() {
-            swapClick($(this), 'Down');
-        }
-
-        function moveLeft() {
-            swapClick($(this), 'Left');
-        }
-
-        function moveRight() {
-            swapClick($(this), 'Right');
-        }
-
-    </script>
-    <style>
-        div.col-xs-3 {
-            border: 1px solid;
-            padding: 0px;
-        }
-
-        .btnM {
-            font-size: medium;
-            font-weight: bold;
-
-        }
-
-        .btnR {
-            font-size: medium;
-            font-weight: bold;
-            width: 100%;
-        }
-    </style>
-
-</body>
-
+   <head>
+      <title>Hindi Matrix Game</title>
+   </head>
+   <body>
+      <h1>Welcome to Hindi Matrix Game! ⭐️</h1>
+      <p>This is still work=in-progress!</p>
+   </body>
 </html>
