--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
    <body>
       <h1>Welcome to Hindi Matrix Game! ⭐️</h1>
       <p>This is still work=in-progress!</p>
+
+      <p>Looking for 4xx Matrix game: <a href="https://tomanishp.github.io/matrix"> 4x4 Matrix Game</a></p>
    </body>
 </html>
