--- a/index.html
+++ b/index.html
@@ -1,12 +1,236 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>Hindi Matrix Game</title>
-   </head>
-   <body>
-      <h1>Welcome to Hindi Matrix Game! ⭐️</h1>
-      <p>This is still work-in-progress!</p>
+<html lang="en">
 
-      <p>Looking for 4x4 Matrix game: <a href="https://tomanishp.github.io/matrix"> 4x4 Matrix Game</a></p>
-   </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>4x4 Hindi Words</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .grid-container {
+            width: 100%;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+
+        .grid-row {
+            border: 1px solid #dee2e6;
+            margin-bottom: 10px;
+            padding: 2px;
+            background-color: #f8f9fa;
+            min-height: 100px;
+            transition: background-color 0.3s ease-in-out;
+            position: relative;
+            display: flex;
+        }
+
+        .grid-item {
+            border: 1px solid #dee2e6;
+            padding: 20px;
+            margin: 1%;
+            cursor: move;
+            user-select: none;
+            height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            font-size: 24px;
+            font-weight: bold;
+            transition: background-color 0.3s ease-in-out;
+            flex: 0 0 24%;
+        }
+
+        .grid-item.correct {
+            background-color: #98FB98;
+        }
+
+        .grid-item.dragging {
+            opacity: 0.5;
+        }
+
+        .controls {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .controls .btn {
+            margin: 0 5px;
+            /* Add spacing between buttons */
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h2 class="text-primary text-center">4x4 Hindi Words</h2>
+        <hr size="1" />
+        <p><strong><span id="sClick">Steps: 0</span></strong></p>
+        <hr size="1" />
+        <div class="grid-container">
+            <div id="grid"></div>
+        </div>
+        <div class="controls">
+            <button class="btn btn-primary" style="display: none;" id="shuffleBtn">Shuffle</button>
+            <button class="btn btn-secondary" id="resetBtn">Reset/ नया क्रम</button>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            let iClicks = 0;
+            let grid = document.getElementById('grid');
+            // Store the original sequence of alphabets (A-I)
+            let originalSequence = getRandomWords().join('').split('');
+            let items = [];
+
+            function createGrid() {
+                grid.innerHTML = '';
+                items = [...originalSequence]; // Create a copy of original sequence
+
+                // Create 4 rows
+                for (let i = 0; i < 4; i++) {
+                    const row = document.createElement('div');
+                    row.className = 'grid-row';
+
+                    // Add 4 items to each row
+                    for (let j = 0; j < 4; j++) {
+                        const item = document.createElement('div');
+                        item.className = 'grid-item';
+                        item.setAttribute('draggable', 'true');
+                        item.textContent = items[i * 4 + j];
+                        row.appendChild(item);
+                    }
+
+                    grid.appendChild(row);
+                }
+                shuffleGrid();
+                checkOrder();
+            }
+
+            function resetGrid() {
+                // Remove all event listeners by removing and recreating the grid element
+                const oldGrid = document.getElementById('grid');
+                const newGrid = document.createElement('div');
+                newGrid.id = 'grid';
+                oldGrid.parentNode.replaceChild(newGrid, oldGrid);
+
+                // Reinitialize the grid
+                grid = newGrid;
+                originalSequence = getRandomWords().join('').split('');
+                initializeEventListeners();
+                createGrid();
+            }
+
+            function initializeEventListeners() {
+                // Initialize drag and drop
+                grid.addEventListener('dragstart', e => {
+                    if (e.target.classList.contains('grid-item')) {
+                        e.target.classList.add('dragging');
+                    }
+                });
+
+                grid.addEventListener('dragend', e => {
+                    if (e.target.classList.contains('grid-item')) {
+                        e.target.classList.remove('dragging');
+                        iClicks++;
+                    }
+                    checkOrder();
+                });
+
+                grid.addEventListener('dragover', e => {
+                    e.preventDefault();
+                    const targetItem = e.target.closest('.grid-item');
+                    if (targetItem) {
+                        const draggingItem = document.querySelector('.dragging');
+                        if (draggingItem !== targetItem) {
+                            const items = [...document.querySelectorAll('.grid-item')];
+                            const draggingIndex = items.indexOf(draggingItem);
+                            const targetIndex = items.indexOf(targetItem);
+
+                            if (targetIndex > draggingIndex) {
+                                targetItem.parentElement.insertBefore(draggingItem, targetItem.nextSibling);
+                            } else {
+                                targetItem.parentElement.insertBefore(draggingItem, targetItem);
+                            }
+
+                            // Rebalance rows if needed
+                            const rows = document.querySelectorAll('.grid-row');
+                            rows.forEach(row => {
+                                if (row.children.length > 4) {
+                                    const lastItem = row.lastElementChild;
+                                    const targetRow = Array.from(rows).find(r => r.children.length < 4);
+                                    if (targetRow) {
+                                        targetRow.appendChild(lastItem);
+                                    }
+                                }
+                            });
+
+                            //Update step count
+                        }
+                    }
+                });
+            }
+
+            function shuffleGrid() {
+                // Remove 'correct' class from all items
+                document.querySelectorAll('.grid-item').forEach(item => {
+                    item.classList.remove('correct');
+                });
+
+                const allItems = [...document.querySelectorAll('.grid-item')];
+                const shuffledItems = allItems.sort(() => Math.random() - 0.5);
+
+                document.querySelectorAll('.grid-row').forEach((row, rowIndex) => {
+                    row.innerHTML = '';
+                    for (let i = 0; i < 4; i++) {
+                        row.appendChild(shuffledItems[rowIndex * 4 + i]);
+                    }
+                });
+                checkOrder();
+            }
+
+            function checkOrder() {
+                const items = document.querySelectorAll('.grid-item');
+                const values = Array.from(items).map(item => item.textContent);
+
+                // Reset all items to white background
+                items.forEach(item => item.classList.remove('correct'));
+
+                // Check for each set of 4 sequential alphabets using originalSequence
+                for (let i = 0; i < originalSequence.length; i += 4) {
+                    const sequenceSet = originalSequence.slice(i, i + 4);
+
+                    // Find consecutive sequences in the grid
+                    for (let j = 0; j <= 12; j++) {
+                        const currentSet = values.slice(j, j + 4);
+
+                        // Check if current set matches the sequence
+                        if (currentSet.length === 4 &&
+                            currentSet.every((val, index) => val === sequenceSet[index])) {
+                            // Mark these items as correct
+                            for (let k = 0; k < 4; k++) {
+                                items[j + k].classList.add('correct');
+                            }
+                        }
+                    }
+                }
+
+                // Update steps
+                document.getElementById("sClick").innerText= 'Steps: ' + iClicks;
+
+            }
+
+
+
+            // Initialize grid and add button handlers
+            initializeEventListeners();
+            createGrid();
+            document.getElementById('shuffleBtn').addEventListener('click', shuffleGrid);
+            document.getElementById('resetBtn').addEventListener('click', resetGrid);
+        });
+    </script>
+    <script src="wordbank.js"></script>
+</body>
+
 </html>
