Added game playing hint

--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
             <button class="btn btn-primary" style="display: none;" id="shuffleBtn">Shuffle</button>
             <button class="btn btn-secondary" id="resetBtn">Reset/ नया क्रम</button>
         </div>
+        <hr size="1" />
+        <div id="enD">
+            <p>
+                <strong>How to play:&nbsp;</strong>You have to guess 4 hindi wrods correctly. Drag and drop box to
+                arrange them in right order. Words can be in any row but then have to be correct word. If same letter is
+                in multiple words, try swapping the letter if they are not accepted.
+            </p>
+        </div>
+        <div id="enH">
+            <p>
+                <strong>कैसे खेलें:&nbsp;</strong>यह चार अक्षर के चार शब्द दिये गए हैं। आप किसी भी डब्बे को उठाकर उसकी
+                जगह बदल सकते हैं। यदि एक ही अक्षर दो या अधिक बार है तो संभव है आपको अलग अक्षरों को लगाना पड़े क्योंकि एक
+                अक्षर एक ही शब्द से जुड़ा है।
+            </p>
+        </div>
+        <hr size="1" />
+        <div style="text-align: center;">(c) Manish Pandey 2024 <a href="mailto:tomanishp@gmail.com">Send feedback/ सुझाव भेजें</a></div>
     </div>
 
     <script>
@@ -217,7 +234,7 @@
                 }
 
                 // Update steps
-                document.getElementById("sClick").innerText= 'Steps: ' + iClicks;
+                document.getElementById("sClick").innerText = 'Steps: ' + iClicks;
 
             }
 
